Logging level cahnged to debug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 onetok.api.key=45905722
 onetok.api.secret=0afbf0ad84bd51da2987faef06d46c1a8e988cbe
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
